# HumanPoseEstimationProjectWork

./: README Tutorials & documentation.md  README.md  Report 1_1.docx  Report 1_2.docx  Report v1.docx  Survey paper Report 1 (Nghonda Tchinda, Erman) Updated V1.docx  Survey paper Report 1 (Nghonda Tchinda, Erman).docx
cameraCalibration/: CMakeLists.txt  CameraCalibrationV1.cpp
cannyEdgeDetection/: .gitignore  CMakeLists.txt  README.md
cannyEdgeDetection/CannyEdgeDetection/: CMakeLists.txt  CannyEdgeDetection1.cpp  CannyEdgeDetection2.cpp
cannyEdgeDetection/CannyEdgeDetection/CannyEdgeDetection/: CMakeLists.txt  CannyEdgeDetection.h  CannyEdgeDetection1.cpp  CannyEdgeDetection2.cpp
objectTracking/: CMakeLists.txt  ObjectTracking.cpp  ObjectTracking.h
poseEstimation/: .gitignore  CMakeLists.txt  PoseEstimation.h  PoseEstimationV1.cpp
surfFeatureDetector/: CMakeLists.txt  SurfFeatureDetectorV2.cpp  SurfFeatureDetectorV3.cpp
